<resources>
    <string name="app_name">SpaceX</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="company">Company</string>
    <string name="company_description">%s was founded by %s in %d. It has now %d employees, %d launch sites, and is valued at USD %d</string>
    <string name="error">"Oops, something went wrong 🤔 "</string>
    <string name="retry">Retry</string>
    <string name="launches">Launches</string>
    <string name="mission_label">Mission :</string>
    <string name="mission_date_label">Date :</string>
    <string name="mission_rocket_label">Rocket name :</string>
    <string name="mission_rocket_type_label">Rocket type :</string>
    <string name="mission_days_since_from_now_label">Days %s now :</string>
    <string name="mission_patch_image">mission patch image</string>
    <string name="launch_success">Launch success</string>
    <string name="filter_label">Filter</string>
    <string name="sort_label">Sort</string>
    <string name="oldest_first">Oldest first</string>
    <string name="newest_first">Newest first</string>
    <string name="clear_filters_label">Clear filters</string>
    <string name="apply_filters_label">Apply filters</string>
    <string name="only_show_successful_launches_label">Only show successful launches</string>
    <string name="launches_empty">No data 🤷‍♂️ try changing filters…‍</string>
    <string name="wikipedia_label">Wikipedia</string>
    <string name="video_page_label">Video Pages</string>
    <string name="article_label">Article</string>
    <string name="selections_label">More info...</string>
    <string name="no_details">No details</string>
</resources>