<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/medium_margin_16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/close_filter_dialog_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close_black_24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filter_label"
        android:text="@string/filter_label"
        style="@style/ThemeOverlay.MySubTitleText"
        app:layout_constraintTop_toBottomOf="@id/close_filter_dialog_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/filter_divider"
        android:layout_marginTop="@dimen/medium_margin_16dp"
        android:background="@color/secondaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_label"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_marginTop="@dimen/small_margin_8dp"
        android:id="@+id/only_successful_launches_check_box"
        app:layout_constraintTop_toBottomOf="@id/filter_divider"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/only_successful_launches_label"
        android:layout_marginStart="@dimen/small_margin_8dp"
        android:paddingTop="@dimen/small_margin_8dp"
        android:text="@string/only_show_successful_launches_label"
        app:layout_constraintStart_toEndOf="@id/only_successful_launches_check_box"
        app:layout_constraintTop_toTopOf="@id/only_successful_launches_check_box"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/only_successful_launches_barrier"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="only_successful_launches_check_box, only_successful_launches_label" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filter_chip_group"
        app:singleSelection="true"
        android:layout_marginTop="@dimen/small_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/only_successful_launches_barrier"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sort_label"
        android:layout_marginTop="@dimen/medium_margin_16dp"
        android:text="@string/sort_label"
        style="@style/ThemeOverlay.MySubTitleText"
        app:layout_constraintTop_toBottomOf="@id/filter_chip_group"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/sort_divider"
        android:layout_marginTop="@dimen/medium_margin_16dp"
        android:background="@color/secondaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sort_label"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sort_group"
        android:layout_marginTop="@dimen/small_margin_8dp"
        android:layout_marginBottom="@dimen/small_margin_8dp"
        app:layout_constraintTop_toBottomOf="@id/sort_divider"
        app:layout_constraintBottom_toTopOf="@id/clear_filters_button">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newest_first"
            android:id="@+id/sort_descending"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sort_ascending"
            android:text="@string/oldest_first"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/clear_filters_button"
        android:text="@string/clear_filters_label"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginEnd="@dimen/small_margin_8dp"
        app:strokeColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/apply_filters_button"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/apply_filters_button"
        android:text="@string/apply_filters_label"
        android:layout_marginStart="@dimen/small_margin_8dp"
        style="@style/ThemeOverlay.MyBodyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/clear_filters_button"
        app:layout_constraintStart_toEndOf="@id/clear_filters_button"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>