<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/background"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:descendantFocusability="blocksDescendants"
        android:id="@+id/block_descendant_clicks">

    <ImageView
        android:id="@+id/launch_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="top"
        android:layout_marginStart="@dimen/medium_margin_16dp"
        android:layout_marginTop="@dimen/medium_margin_16dp"
        android:layout_marginBottom="@dimen/medium_margin_16dp"
        android:contentDescription="@string/mission_patch_image"
        android:src="@mipmap/ic_launcher" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/content_holder"
        android:layout_margin="@dimen/medium_margin_16dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/label_barrier"
            android:layout_width="1dp"
            android:layout_height="10dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="mission_name_label,
            mission_rocket_type_label,
            mission_date_label,
            mission_rocket_label,
            success_launch_label,
            mission_days_since_from_now_label" />

        <TextView
            android:id="@+id/mission_name_label"
            style="@style/ThemeOverlay.MyBodyTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mission_rocket_label"
            style="@style/ThemeOverlay.MyBodyTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_4dp"
            android:text="@string/mission_rocket_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mission_name_text" />

        <TextView
            android:id="@+id/mission_rocket_type_label"
            style="@style/ThemeOverlay.MyBodyTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_4dp"
            android:text="@string/mission_rocket_type_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mission_rocket_text" />

        <TextView
            android:id="@+id/mission_date_label"
            style="@style/ThemeOverlay.MyBodyTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_4dp"
            android:text="@string/mission_date_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mission_rocket_type_text" />

        <TextView
            android:id="@+id/mission_days_since_from_now_label"
            style="@style/ThemeOverlay.MyBodyTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin_4dp"
            android:text="@string/mission_days_since_from_now_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mission_date_text" />

        <TextView
            android:id="@+id/mission_name_text"
            style="@style/ThemeOverlay.MyBodyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin_8dp"
            android:paddingEnd="@dimen/small_margin_8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/mission_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/label_barrier" />

        <TextView
            android:id="@+id/mission_rocket_text"
            style="@style/ThemeOverlay.MyBodyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin_8dp"
            android:paddingEnd="@dimen/small_margin_8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/mission_rocket_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/label_barrier" />

        <TextView
            android:id="@+id/mission_rocket_type_text"
            style="@style/ThemeOverlay.MyBodyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin_8dp"
            android:paddingEnd="@dimen/small_margin_8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/mission_rocket_type_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/label_barrier" />

        <TextView
            android:id="@+id/mission_date_text"
            style="@style/ThemeOverlay.MyBodyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin_8dp"
            android:paddingEnd="@dimen/small_margin_8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/mission_date_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/label_barrier" />

        <TextView
            android:id="@+id/mission_days_since_from_now_text"
            style="@style/ThemeOverlay.MyBodyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/small_margin_8dp"
            android:paddingEnd="@dimen/small_margin_8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/mission_days_since_from_now_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mission_days_since_from_now_label" />

        <TextView
            android:id="@+id/success_launch_label"
            style="@style/ThemeOverlay.MyBodyTextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_success"
            app:layout_constraintBottom_toBottomOf="@id/successful_launch_check_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/successful_launch_check_box" />


        <CheckBox
            android:id="@+id/successful_launch_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/small_margin_8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:clickable="false"
            android:focusable="false"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toEndOf="@id/success_launch_label"
            app:layout_constraintTop_toBottomOf="@id/mission_days_since_from_now_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>